--- a/index.html
+++ b/index.html
@@ -4,30 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Claculator</title>
     <script src="java.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <h1>Claculator</h1>
     <div class="claculator">
         <div class="output">
             <div class="previousDisplay"></div>
             <div class="currentDisplay"></div>
         </div>
-        <button class="number" value="7">7</button>
-        <button class="number" value="8">8</button>
-        <button class="number" value="9">9</button>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
         <button class="operator" value="+">+</button>
-        <button class="number" value="4">4</button>
-        <button class="number" value="5">5</button>
-        <button class="number" value="6">6</button>
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
         <button class="operator" value="-">-</button>
-        <button class="number" value="1">1</button>
-        <button class="number" value="2">2</button>
-        <button class="number" value="3">3</button>
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
         <button class="operator" value="*">*</button>
-        <button class="number" value="0">0</button>
+        <button class="number">0</button>
         <button class="equal" id="calculate">=</button>
         <button class="operator" value="/">/</button>
         <button class="clear" id="clear">C</button>
